--- a/css/footer.scss
+++ b/css/footer.scss
@@ -17,7 +17,7 @@
 /* Footer */
 .footer {
   padding: 5px;
-  margin: 15px;
+  margin: 20px auto 360px;
   background:rgba(0,0,0,0.5);
   border:3px double #530;
 }
